--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vote_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vote_list.html
@@ -28,7 +28,7 @@
                             <el-col :span="10" :offset="1">
                                 <el-form-item label="投票名称" style="margin:0;">
                                         <el-date-picker
-                                        v-model="value1"
+                                        v-model="searchForm.voteTitle"
                                         type="daterange"
                                         range-separator="-"
                                         start-placeholder="开始日期"
@@ -52,11 +52,11 @@
                 <div class="cv_content_square">
                     <el-table :data="tableData" style="width: 100%; margin: 10px auto;" stripe>
                         <el-table-column prop="voteMeetingId" width="160" label="所属会议详情编号"></el-table-column>
-                        <el-table-column prop="voteTitle" width="300" label="投票名称"></el-table-column>
+                        <el-table-column prop="voteTitle" width="220" label="投票名称"></el-table-column>
                         <el-table-column prop="voteType" width="110" label="类型"></el-table-column>
-                        <el-table-column prop="voteCrtTime" width="140" label="创建时间"></el-table-column>
-                        <el-table-column prop="userName" width="110" label="创建人"></el-table-column>
-                        <el-table-column label="操作" width="110" fixed="right">
+                        <el-table-column prop="voteCrtTime" width="180" label="创建时间"></el-table-column>
+                        <el-table-column prop="userName" width=90 label="创建人"></el-table-column>
+                        <el-table-column label="操作" width="180" fixed="right">
                             <template slot-scope="scope">
                                 <el-button type="text" size="small">编辑</el-button>
                                 <el-button type="text" size="small">详情</el-button>
@@ -68,6 +68,8 @@
                 <!--分页器-->
                 <div class="cv_page_zone">
                     <el-pagination
+                        @current-change="handleCurrentChange"
+                        :current-page="pagination1.currPage"
                         :page-size="pagination1.pageSize"
                         layout="total, prev, pager, next, jumper"
                         :total="pagination1.totalCount">
@@ -89,6 +91,7 @@
                                         placeholder="请输入所属会议详情编号"
                                         v-model="voteForm.voteMeetingId"
                                         auto-complete="off"
+                                        :disabled="creatOrEdit == 1"
                                         ></el-input>
                                 </el-form-item>
                             </el-col>
@@ -97,10 +100,10 @@
                             <el-col :span="18">
                                 <el-form-item label="投票类型" label-width="12%" prop="voteType" style="margin:0;">
                                     <template>
-                                        <el-radio-group v-model="voteForm.voteType">
-                                            <el-radio :label="3" value="singleChoose">多项单选</el-radio>
-                                            <el-radio :label="6" value="PK">观点PK</el-radio>
-                                        </el-radio-group>
+                                        <div>
+                                            <label><input @click="getRadioVal" type="radio" name="type" value="多项单选">多项单选</label>
+                                            <label><input @click="getRadioVal" type="radio" name="type" value="观点PK">观点PK</label>
+                                        </div>
                                     </template>
                                 </el-form-item>
                             </el-col>
@@ -114,13 +117,13 @@
                                         placeholder="请输入投票名称"
                                         v-model="voteForm.voteTitle"
                                         auto-complete="off"
-                                        maxlength="36"
+                                        maxlength="10"
                                         show-word-limit
                                         ></el-input>
                                 </el-form-item>
                             </el-col>
                         </el-row>
-                        <el-row class="el-row-h70">
+                        <!-- <el-row class="el-row-h70">
                             <el-col :span="18">
                                 <el-form-item label="投票摘要" label-width="12%" prop="voteAbstract" style="margin:0;">
                                     <el-input
@@ -129,48 +132,38 @@
                                         placeholder="请输入投票摘要"
                                         v-model="voteForm.voteAbstract"
                                         auto-complete="off"
-                                        maxlength="30"
-                                        show-word-limit
                                         ></el-input>
                                 </el-form-item>
                             </el-col>
-                        </el-row>
-                        <div v-for="(item,index) in voteForm.voteOptions">
-                            <el-row class="el-row-h70">
-                                <el-col :span="18">
-                                    <el-form-item label="选项1" label-width="12%" prop="voteOptions" style="margin:0;">
+                        </el-row> -->
+                        <!-- <div v-for="(item,index) in voteForm.voteOptions" style="margin-top:20px;">
+                            <el-row>
+                                <el-col :span="18" class="el-row-h70">
+                                    <el-form-item label="选项" label-width="12%" prop="voteOptions" style="margin:0;">
                                         <el-input
                                             clearable
                                             type="text"
                                             placeholder="请输入选项内容"
-                                            v-model="item.OptionsText"
+                                            v-model="item.optionsText"
                                             auto-complete="off"></el-input>
                                     </el-form-item>
                                 </el-col>
-                            </el-row>
-                            <el-row class="el-row-h70">
-                                <el-col :span="18">
-                                    <el-form-item label="选项2" label-width="12%" prop="voteTitle" style="margin:0;">
-                                        <el-input
-                                            clearable
-                                            type="text"
-                                            placeholder="请输入选项内容"
-                                            auto-complete="off"></el-input>
-                                    </el-form-item>
+                                <el-col :span="2" :offset="1" style="margin-top: 0px">
+                                    <el-button size="medium" type="primary" icon="el-icon-plus" @click="addOptions(index)" circle ></el-button>
                                 </el-col>
-                                <el-col :span="4" :offset="1">
-                                    <i class=""></i>
-                                </el-col>
+                                
                             </el-row>
-                        </div>
+                            
+                            
+                        </div> -->
                         
                     </el-form>
-                    <el-row style="margin-top:30px;">
+                    <el-row style="margin-top: 30px">
                         <el-col class="el-row-h40" :span="2">
-                            <el-button type="primary" style="width: 100%">保存</el-button>
+                            <el-button type="primary" style="width: 100%" @click="testSubmit('voteForm')">保存</el-button>
                         </el-col>
                         <el-col class="el-row-h40" :span="2" :offset="1">
-                            <el-button type="primary" style="width: 100%">取消</el-button>
+                            <el-button type="primary" style="width: 100%" @click="closeCreatOrEdit('calendarForm')">取消</el-button>
                         </el-col>
                     </el-row>
                 </div>
