--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/voteOption_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/voteOption_list.html
@@ -1,1 +1,66 @@
-选项管理
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="${request.contextPath}/statics/css/element.css">
+
+<title>选项管理</title>
+</head>
+<body>
+    <#include "/header.html">
+    <div class="cvpage_title_common">选项管理</div>
+    <div id="voteOption_list" class="cv_page_content">
+        <!-- 列表开始 -->
+        <div v-show="!showChildPage">
+            <!--列表搜索区-->
+            <div class="cv_content_square">
+                <el-form :model="searchForm" status-icon class="demo-ruleForm" label-width="30%" label-position="right" @submit.native.prevent>
+                    <el-row class="el-row-h60">
+                        <el-col :span="9">
+                            <el-form-item label="所属投票编号" style="margin:0;">
+                                <el-input
+                                clearable
+                                type="text"
+                                v-model="searchForm.voteId"
+                                auto-complete="off"></el-input>
+                            </el-form-item>
+                        </el-col>
+                        <el-col :span="3" :offset="1" class="el-row-h40">
+                            <el-button type="primary" icon="el-icon-search" style="width:100%">搜索</el-button>
+                        </el-col>
+                    </el-row>
+                </el-form>
+            </div>
+            <!--功能按钮区-->
+            <el-row class="el-row-h50">
+                <el-col :span="4">
+                    <el-button type="primary" plain icon="el-icon-plus" style="width:100%">新增投票选项</el-button>
+                </el-col>
+            </el-row>
+            <!--表格查询结果区-->
+            <div class="cv_content_square">
+                <el-table :data="tableData" style="width: 100%; margin:10px auto;" ref="multipleTable" stripe>
+                    <el-table-column prop="voteOptionId" label="投票选项编号" width="100"></el-table-column>
+                    <el-table-column prop="voteId" label="投票编号" width="120"></el-table-column>
+                    <el-table-column prop="voteOptionName" label="投票选项名称" width="100"></el-table-column>
+                    <el-table-column prop="voteOptionCount" label="投票选项数量"></el-table-column>
+                    <el-table-column prop="voteOptionCrtUserId" label="创建人" width="90"></el-table-column>
+                    <el-table-column prop="voteOptionCrtTime" label="创建时间" width="95"></el-table-column>
+                    <el-table-column prop="voteOptionModUserId" label="更新人" width="90"></el-table-column>
+                    <el-table-column prop="voteOptionModTime" label="更新时间" width="95"></el-table-column>
+                    <el-table-column label="操作" width="100" fixed="right">
+                        <template slot-scope="scope">
+                            <el-button type="text" size="small" @click="addOrEditGuest(1,scope.row)">修改</el-button>
+                            <el-button type="text" size="small" @click="deleteThisGuest(scope.row)">删除</el-button>
+                        </template>
+                    </el-table-column>
+                </el-table>
+            </div>
+           
+
+        </div>
+        <!-- 列表结束 -->
+    </div>
+</body>
+<script type="text/javascript" src="${request.contextPath}/statics/js/element.js"></script>
+<script type="text/javascript" src="${request.contextPath}/statics/js/modules/meeting/voteOption_list.js"></script>
+<script type="text/javascript" src="${request.contextPath}/statics/js/clockToast.js"></script>
