--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/voteOption_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/voteOption_list.html
@@ -25,7 +25,7 @@
                             </el-form-item>
                         </el-col>
                         <el-col :span="3" :offset="1" class="el-row-h40">
-                            <el-button type="primary" icon="el-icon-search" style="width:100%">搜索</el-button>
+                            <el-button type="primary" icon="el-icon-search" style="width:100%" @click="startSearch(0)">搜索</el-button>
                         </el-col>
                     </el-row>
                 </el-form>
@@ -33,21 +33,21 @@
             <!--功能按钮区-->
             <el-row class="el-row-h50">
                 <el-col :span="4">
-                    <el-button type="primary" plain icon="el-icon-plus" style="width:100%">新增投票选项</el-button>
+                    <el-button type="primary" plain icon="el-icon-plus" style="width:100%" @click="addOrEditGuest(0)">新增投票选项</el-button>
                 </el-col>
             </el-row>
             <!--表格查询结果区-->
             <div class="cv_content_square">
                 <el-table :data="tableData" style="width: 100%; margin:10px auto;" ref="multipleTable" stripe>
-                    <el-table-column prop="voteOptionId" label="投票选项编号" width="100"></el-table-column>
-                    <el-table-column prop="voteId" label="投票编号" width="120"></el-table-column>
-                    <el-table-column prop="voteOptionName" label="投票选项名称" width="100"></el-table-column>
-                    <el-table-column prop="voteOptionCount" label="投票选项数量"></el-table-column>
-                    <el-table-column prop="voteOptionCrtUserId" label="创建人" width="90"></el-table-column>
+                    <el-table-column prop="voteOptionId" label="投票选项编号" width="120"></el-table-column>
+                    <el-table-column prop="voteId" label="投票编号" width="100"></el-table-column>
+                    <el-table-column prop="voteOptionName" label="投票选项名称"></el-table-column>
+                    <el-table-column prop="voteOptionCount" label="投票选项数量" width="120"></el-table-column>
+                    <el-table-column prop="voteOptionCrtUserId" label="创建人id" width="90"></el-table-column>
                     <el-table-column prop="voteOptionCrtTime" label="创建时间" width="95"></el-table-column>
-                    <el-table-column prop="voteOptionModUserId" label="更新人" width="90"></el-table-column>
+                    <el-table-column prop="voteOptionModUserId" label="更新人id" width="90"></el-table-column>
                     <el-table-column prop="voteOptionModTime" label="更新时间" width="95"></el-table-column>
-                    <el-table-column label="操作" width="100" fixed="right">
+                    <el-table-column label="操作"  width="120" fixed="right">
                         <template slot-scope="scope">
                             <el-button type="text" size="small" @click="addOrEditGuest(1,scope.row)">修改</el-button>
                             <el-button type="text" size="small" @click="deleteThisGuest(scope.row)">删除</el-button>
@@ -55,10 +55,64 @@
                     </el-table-column>
                 </el-table>
             </div>
-           
-
+            <!--分页器-->
+            <div class="cv_page_zone">
+                <el-pagination
+                    @current-change=""
+                    :current-page="pagination1.currPage"
+                    :page-size="pagination1.pageSize"
+                    layout="total, prev, pager, next, jumper"
+                    :total="pagination1.totalCount">
+                </el-pagination>
+            </div>
         </div>
         <!-- 列表结束 -->
+        <!-- 新增修改开始 -->
+        <div v-show="showChildPage">
+            <!-- 选项表单信息 -->
+            <div class="cv_content_square">
+                <el-form :model="VoteOptForm" :rules="VoteOptFormRules"  ref="VoteOptForm" status-icon class="demo-ruleForm" label-width="30%" label-position="right">
+                    <el-row class="el-row-h70">
+                        <el-col :span="12">
+                            <el-form-item label="投票编号" prop="voteId" style="margin:0;">
+                                <el-input
+                                    type="text"
+                                    v-model="VoteOptForm.voteId"
+                                    auto-complete="off">
+                                </el-input>
+                            </el-form-item>
+                        </el-col>
+                    </el-row>
+                    <el-row class="el-row-h70">
+                        <el-col :span="24">
+                            <el-form-item label="投票选项名称" label-width="15%" prop="voteOptionName" style="margin:0;">
+                                <el-input
+                                    clearable
+                                    type="text"
+                                    maxlength="50"
+                                    placeholder="限50字"
+                                    v-model="VoteOptForm.voteOptionName"
+                                    auto-complete="off">
+                                </el-input>
+                            </el-form-item>
+                        </el-col>
+                    </el-row>
+                </el-form>
+            </div>
+            <!--新建保存修改-->
+            <el-row class="el-row-h60" style="margin-top:20px;">
+                <el-col :span="3" :offset="8">
+                    <el-button type="primary" style="width:100%" @click="submitCreatEdit('VoteOptForm')">保存</el-button>
+                </el-col>
+                <el-col :span="3" :offset="2">
+                    <el-button type="primary" style="width:100%" @click="closeEditCreatEdit('VoteOptForm')">取消</el-button>
+                </el-col>
+            </el-row>
+            
+
+        </div>
+        <!-- 新增修改结束 -->
+
     </div>
 </body>
 <script type="text/javascript" src="${request.contextPath}/statics/js/element.js"></script>
