--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/voteOption_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/voteOption_list.html
@@ -39,15 +39,15 @@
             <!--表格查询结果区-->
             <div class="cv_content_square">
                 <el-table :data="tableData" style="width: 100%; margin:10px auto;" ref="multipleTable" stripe>
-                    <el-table-column prop="voteOptionId" label="投票选项编号" width="120"></el-table-column>
-                    <el-table-column prop="voteId" label="投票编号" width="100"></el-table-column>
+                    <!-- <el-table-column prop="voteOptionId" label="投票选项编号" width="120"></el-table-column> -->
+                    <el-table-column prop="voteId" label="投票编号" width="120"></el-table-column>
                     <el-table-column prop="voteOptionName" label="投票选项名称"></el-table-column>
                     <el-table-column prop="voteOptionCount" label="投票选项数量" width="120"></el-table-column>
-                    <el-table-column prop="voteOptionCrtUserId" label="创建人id" width="90"></el-table-column>
-                    <el-table-column prop="voteOptionCrtTime" label="创建时间" width="95"></el-table-column>
-                    <el-table-column prop="voteOptionModUserId" label="更新人id" width="90"></el-table-column>
-                    <el-table-column prop="voteOptionModTime" label="更新时间" width="95"></el-table-column>
-                    <el-table-column label="操作"  width="120" fixed="right">
+                    <!-- <el-table-column prop="voteOptionCrtUserId" label="创建人id" width="90"></el-table-column> -->
+                    <el-table-column prop="voteOptionCrtTime" label="创建时间" width="160"></el-table-column>
+                    <!-- <el-table-column prop="voteOptionModUserId" label="更新人id" width="90"></el-table-column> -->
+                    <el-table-column prop="voteOptionModTime" label="更新时间" width="160"></el-table-column>
+                    <el-table-column label="操作"  width="140" fixed="right">
                         <template slot-scope="scope">
                             <el-button type="text" size="small" @click="addOrEditGuest(1,scope.row)">修改</el-button>
                             <el-button type="text" size="small" @click="deleteThisGuest(scope.row)">删除</el-button>
@@ -71,13 +71,13 @@
         <div v-show="showChildPage">
             <!-- 选项表单信息 -->
             <div class="cv_content_square">
-                <el-form :model="VoteOptForm" :rules="VoteOptFormRules"  ref="VoteOptForm" status-icon class="demo-ruleForm" label-width="30%" label-position="right">
+                <el-form :model="voteOptForm" :rules="voteOptFormRules" ref="voteOptForm" status-icon class="demo-ruleForm" label-width="30%" label-position="right">
                     <el-row class="el-row-h70">
                         <el-col :span="12">
                             <el-form-item label="投票编号" prop="voteId" style="margin:0;">
                                 <el-input
                                     type="text"
-                                    v-model="VoteOptForm.voteId"
+                                    v-model="voteOptForm.voteId"
                                     auto-complete="off">
                                 </el-input>
                             </el-form-item>
@@ -91,7 +91,7 @@
                                     type="text"
                                     maxlength="50"
                                     placeholder="限50字"
-                                    v-model="VoteOptForm.voteOptionName"
+                                    v-model="voteOptForm.voteOptionName"
                                     auto-complete="off">
                                 </el-input>
                             </el-form-item>
@@ -102,10 +102,10 @@
             <!--新建保存修改-->
             <el-row class="el-row-h60" style="margin-top:20px;">
                 <el-col :span="3" :offset="8">
-                    <el-button type="primary" style="width:100%" @click="submitCreatEdit('VoteOptForm')">保存</el-button>
+                    <el-button type="primary" style="width:100%" @click="submitCreatEdit('voteOptForm')">保存</el-button>
                 </el-col>
                 <el-col :span="3" :offset="2">
-                    <el-button type="primary" style="width:100%" @click="closeEditCreatEdit('VoteOptForm')">取消</el-button>
+                    <el-button type="primary" style="width:100%" @click="closeEditCreatEdit('voteOptForm')">取消</el-button>
                 </el-col>
             </el-row>
             
