--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_guest_bf.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_guest_bf.html
@@ -3,12 +3,12 @@
 <head>
 <link rel="stylesheet" href="${request.contextPath}/statics/css/icon.css">
 <link rel="stylesheet" href="${request.contextPath}/statics/css/element.css">
-<title>会议机构</title>
+<title>会议嘉宾</title>
 </head>
 <body>
     <#include "/header.html">
-    <div class="cvpage_title_common">会议机构</div>
-    <div id="meeting_institution" class="cv_page_content">
+    <div class="cvpage_title_common">会议嘉宾</div>
+    <div id="meeting_guest" class="cv_page_content">
         <!------------------列表开始------------------>
         <div v-show="!showChildPage">
             <!--列表搜索区-->
@@ -20,7 +20,7 @@
                                 <el-input
                                 clearable
                                 type="text"
-                                v-model="searchForm.meetingCooperationMeetingId"
+                                v-model="searchForm.meetingGuestMeetingId"
                                 auto-complete="off"></el-input>
                             </el-form-item>
                         </el-col>
@@ -33,22 +33,22 @@
             <!--功能按钮区-->
             <el-row class="el-row-h50">
                 <el-col :span="4">
-                    <el-button type="primary" plain icon="el-icon-plus" style="width:100%" @click="addOrEditCoper(0)">新增机构列表</el-button>
+                    <el-button type="primary" plain icon="el-icon-plus" style="width:100%" @click="addOrEditGuest(0)">新增嘉宾列表</el-button>
                 </el-col>
             </el-row>
             <!--表格查询结果区-->
             <div class="cv_content_square">
                 <el-table :data="tableData" style="width: 100%; margin:10px auto;" ref="multipleTable" stripe>
-                    <el-table-column prop="meetingCooperationMeetingId" label="所属会议编号" width="110"></el-table-column>
+                    <el-table-column prop="meetingGuestMeetingId" label="所属会议编号" width="110"></el-table-column>
                     <el-table-column prop="meetingTitle" label="所属会议名称" width=""></el-table-column>
                     <el-table-column prop="userName" label="创建人" width="90"></el-table-column>
                     <el-table-column prop="modUserName" label="更新人" width="90"></el-table-column>
-                    <el-table-column prop="meetingCooperationCrtTime" label="创建时间" width="200"></el-table-column>
-                    <el-table-column prop="meetingCooperationModTime" label="更新时间" width="200"></el-table-column>
+                    <el-table-column prop="meetingGuestCrtTime" label="创建时间" width="200"></el-table-column>
+                    <el-table-column prop="meetingGuestModTime" label="更新时间" width="200"></el-table-column>
                     <el-table-column label="操作" width="100" fixed="right">
                         <template slot-scope="scope">
-                            <el-button type="text" size="small" @click="addOrEditCoper(1,scope.row)">修改</el-button>
-                            <el-button type="text" size="small" @click="deleteThisCoper(scope.row)">删除</el-button>
+                            <el-button type="text" size="small" @click="addOrEditGuest(1,scope.row)">修改</el-button>
+                            <el-button type="text" size="small" @click="deleteThisGuest(scope.row)">删除</el-button>
                         </template>
                     </el-table-column>
                 </el-table>
@@ -71,14 +71,14 @@
         <div v-show="showChildPage">
             <!--表单信息-->
             <div class="cv_content_square">
-                <el-form :model="meetingCopForm" :rules="meetingCopFormRules"  ref="meetingCopForm" status-icon class="demo-ruleForm" label-width="15%" label-position="right">
+                <el-form :model="meetingGuestForm" :rules="meetingGuestFormRules"  ref="meetingGuestForm" status-icon class="demo-ruleForm" label-width="15%" label-position="right">
                     <el-row class="el-row-h70">
                         <el-col :span="24">
-                            <el-form-item label-width="13%" prop="meetingCooperationMeetingId" label="所属会议编号" style="margin:0;">
+                            <el-form-item label-width="16%" prop="meetingGuestMeetingId" label="所属会议编号" style="margin:0;">
                                 <el-input
                                 clearable
                                 type="text"
-                                v-model="meetingCopForm.meetingCooperationMeetingId"
+                                v-model="meetingGuestForm.meetingGuestMeetingId"
                                 auto-complete="off"
                                 :disabled="creatOrEdit == 1"></el-input>
                             </el-form-item>
@@ -86,134 +86,86 @@
                     </el-row>
                     <el-row class="el-row-h80">
                         <el-col :span="24">
-                            <el-form-item label-width="13%" prop="meetingTitle" label="所属会议名称" style="margin:0;">
+                            <el-form-item label-width="16%" prop="meetingTitle" label="所属会议名称" style="margin:0;">
                                 <el-input
                                 clearable
                                 type="text"
-                                v-model="meetingCopForm.meetingTitle"
+                                v-model="meetingGuestForm.meetingTitle"
                                 auto-complete="off"
                                 :disabled="true"></el-input>
                             </el-form-item>
                         </el-col>
                     </el-row>
 
-                    <!--一级机构列表数据开始-->
-                    <div v-for="(item,index) in meetingCopForm.meetingCooperationJson">
-                        <el-row class="el-row-h60">
-                            <el-col :span="17">
-                                <el-form-item label="一级标题" style="margin:0;">
-                                    <el-input
-                                    clearable
-                                    type="text"
-                                    v-model="item.labelText"
-                                    auto-complete="off"></el-input>
-                                </el-form-item>
-                            </el-col>
-                            <el-col class="el-row-h40" :span="3" :offset="1">
-                                <el-button type="primary" icon="el-icon-plus" style="width:100%" @click="addCopLv2(index)">二级标题</el-button>
-                            </el-col>
-                            <el-col class="el-row-h40" :span="2" :offset="1">
-                                <el-button style="width:100%" icon="el-icon-circle-close" @click="delCopLv1(index)"></el-button>
-                            </el-col>
-                        </el-row>
-
-                        <!--二级标题开始-->
-                        <div v-for="(item2,index2) in item.children">
-                            <el-row class="el-row-h60">
-                                <el-col :span="15" :offset="2">
-                                    <el-form-item label="二级标题" style="margin:0;">
-                                        <el-input
-                                        clearable
-                                        type="text"
-                                        v-model="item2.labelText"
-                                        auto-complete="off"></el-input>
-                                    </el-form-item>
-                                </el-col>
-                                <el-col class="el-row-h40" :span="3" :offset="1">
-                                    <el-button type="primary" icon="el-icon-plus" style="width:100%" @click="addCopLv3(index,index2)">机构媒体</el-button>
-                                </el-col>
-                                <el-col class="el-row-h40" :span="2" :offset="1">
-                                    <el-button style="width:100%" icon="el-icon-circle-close" @click="delCopLv2(index,index2)"></el-button>
-                                </el-col>
-                            </el-row>
-
-                            <!--三级机构列表开始-->
-                            <div class="logo_list clearfix">
-                                <div class="logo_list_item" v-for="(item3,index3) in item2.children">
-                                    <img :src="item3.picUrl">
-                                    <div class="delbtn el-icon-circle-close" @click="delThisLogo(index,index2,index3)"></div>
-                                    <el-input
-                                        class="scaleText"
-                                        type="text"
-                                        v-model="item3.scale"
-                                        auto-complete="off"
-                                        @change="scaleChange(index,index2,index3)"></el-input>
-                                </div>
-                            </div>
-                            <!--三级机构列表结束--> 
+                    <!--嘉宾列表数据开始-->
+                    <div class="guest_list clearfix">
+                        <div class="guest_list_item" v-for="(item,index) in meetingGuestForm.meetingGuestJson">
+                            <img :src="item.guestImg">
+                            <div class="delbtn el-icon-circle-close" @click="delThisGuest(index)"></div>
+                            <div class="nametext" v-text="item.guestName"></div>
+                            <div class="movebtn" v-if="index !== 0" @click="moveUp(index)">前移</div>
+                            <div class="movebtn" v-if="index !== (meetingGuestForm.meetingGuestJson.length - 1)" @click="moveDown(index)">后移</div>
                         </div>
-                        <!--二级标题结束-->
                     </div>
-                    <!--一级机构列表数据结束-->
+                    
 
                     <el-row style="margin-top: 15px;">
                         <el-col class="el-row-h40" :span="24">
-                            <el-button type="primary" style="width:100%" icon="el-icon-plus" @click="addCopLv1()">添加一级标题</el-button>
+                            <el-button type="primary" style="width:100%" icon="el-icon-plus" @click="addGuestToList()">添加嘉宾</el-button>
                         </el-col>
                     </el-row>
+
                 </el-form>
             </div>
             <!--新建保存修改-->
             <el-row class="el-row-h60" style="margin-top:20px;">
                 <el-col :span="3" :offset="8">
-                    <el-button type="primary" style="width:100%" @click="testSubmit('meetingCopForm')">保存</el-button>
+                    <el-button type="primary" style="width:100%" @click="testSubmit('meetingGuestForm')">保存</el-button>
                 </el-col>
                 <el-col :span="3" :offset="2">
-                    <el-button type="primary" style="width:100%" @click="closeCreatOrEdit('meetingCopForm')">取消</el-button>
+                    <el-button type="primary" style="width:100%" @click="closeCreatOrEdit('meetingGuestForm')">取消</el-button>
                 </el-col>
             </el-row>
 
 
-            <!--机构列表弹出层开始-->
-            <el-dialog title="机构列表" :visible.sync="showMeidaLibDialog" width="100%" :fullscreen="true" :show-close="false">
-                <el-form :model="searchCoperForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
+            <!--嘉宾库弹出层开始-->
+            <el-dialog title="嘉宾列表" :visible.sync="showGuestLibDialog" width="100%" :fullscreen="true" :show-close="false">
+                <el-form :model="searchGuestForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
                     <el-row class="el-row-h60">
                         <el-col :span="12">
-                            <el-form-item label="机构名称" style="margin:0;">
+                            <el-form-item label="嘉宾名称" style="margin:0;">
                                 <el-input
                                 clearable
                                 type="text"
-                                v-model="searchCoperForm.cooperationName"
+                                v-model="searchGuestForm.guestName"
                                 auto-complete="off"></el-input>
                             </el-form-item>
                         </el-col>
                         <el-col :span="3" :offset="1" class="el-row-h40">
-                            <el-button type="primary" icon="el-icon-search" style="width:100%" @click="searchCoper(0)">搜索</el-button>
+                            <el-button type="primary" icon="el-icon-search" style="width:100%" @click="searchGuest(0)">搜索</el-button>
                         </el-col>
                         <el-col :span="3" :offset="1" class="el-row-h40">
-                            <el-button type="primary" style="width:100%" icon="el-icon-plus" @click="batchAddLogo">批量添加</el-button>
+                            <el-button type="primary" style="width:100%" icon="el-icon-plus" @click="batchAddGuest">批量添加</el-button>
                         </el-col>
                         <el-col :span="3" :offset="1" class="el-row-h40">
                             <el-button type="primary"  style="width:100%" @click="backToEdit()">返回</el-button>
                         </el-col>
                     </el-row>
                 </el-form>
-                <el-table :data="coperTableData" max-height="450" style="width: 100%; margin:10px auto;" @selection-change="handleSelectionChange"  ref="multipleTable" stripe>
+                <el-table :data="guestTableData" max-height="450" style="width: 100%; margin:10px auto;" @selection-change="handleSelectionChange"  ref="multipleTable" stripe>
                     <el-table-column
                         type="selection"
                         width="55">
                     </el-table-column>
-                    <el-table-column prop="cooperationName" label="机构名称" width=""></el-table-column>
-                    <el-table-column prop="cooperationImg" label="机构Logo" width="170">
-                        <template v-if="scope.row.cooperationImg" slot-scope="scope">
-                            <img style="width:150px;height:45px;" :src="scope.row.cooperationImg">
+                    <el-table-column prop="guestImg" label="嘉宾头像" width="180">
+                        <template v-if="scope.row.guestImg" slot-scope="scope">
+                            <img style="width:60px;height:60px;" :src="scope.row.guestImg">
                         </template>
                     </el-table-column>
-                    <el-table-column prop="cooperationCrtUserName" label="创建人" width="90"></el-table-column>
-                    <el-table-column prop="cooperationCrtTime" label="创建时间" width="160"></el-table-column>
+                    <el-table-column prop="guestName" label="嘉宾姓名"></el-table-column>
                     <el-table-column label="操作" width="100" fixed="right">
                         <template slot-scope="scope">
-                            <el-button type="text" size="small" @click="addThisCoper(scope.row)">添加</el-button>
+                            <el-button type="text" size="small" @click="addThisImg(scope.row)">添加</el-button>
                         </template>
                     </el-table-column>
                 </el-table>
@@ -228,7 +180,7 @@
                     </el-pagination>
                 </div>
             </el-dialog>
-            <!--机构列表弹出层结束-->
+            <!--嘉宾库弹出层结束-->
 
 
         </div>
@@ -241,7 +193,7 @@
 <script type="text/javascript" src="${request.contextPath}/statics/libs/jquery.base64.js"></script>
 
 <script type="text/javascript" src="${request.contextPath}/statics/js/element.js"></script>
-<script type="text/javascript" src="${request.contextPath}/statics/js/modules/meeting/meeting_institution.js"></script>
+<script type="text/javascript" src="${request.contextPath}/statics/js/modules/meeting/meeting_guest.js"></script>
 <script type="text/javascript" src="${request.contextPath}/statics/js/clockToast.js"></script>
 
 <style>
@@ -251,24 +203,24 @@
     font-size: 16px!important;
     color: rgb(214, 32, 8)!important;
 }
-.logo_list{
-    padding:0 0 0 18%;
+.guest_list{
+    padding:0;
 }
-.logo_list_item{
+.guest_list_item{
     display: block;
     float: left;
     position: relative;
-    width: 150px;
-    height: 100px;
+    width: 130px;
+    height: 190px;
     margin: 0 20px 20px 0;
 }
-.logo_list_item img{
+.guest_list_item img{
     display: block;
-    width: 148px;
-    height: 58px;
+    width: 130px;
+    height: 130px;
     border:1px solid #dadada;
 }
-.logo_list_item .delbtn{
+.guest_list_item .delbtn{
     display: block;
     position: absolute;
     top:5px;
@@ -277,6 +229,17 @@
     height: 15px;
     cursor: pointer;
     color: rgb(0, 0, 0)!important;
+}
+.guest_list_item .nametext{
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    background: #175CE9;
+    text-align: center;
+    color: #FFF;
 }
 .movebtn{
     width:50%;
@@ -315,10 +278,5 @@
     display: block;
 }
 
-.scaleText .el-input__inner{
-    width: 148px;
-    text-align: center;
-    border-radius: 0 0 4px 4px;
-}
 </style>
 </html>
